<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="search">Search</string>
    <string name="mediateka">Media</string>
    <string name="settings">Settings</string>
    <string name="menu_dark_theme">Dark theme</string>
    <string name="menu_share_app">Share application</string>
    <string name="menu_support">Support</string>
    <string name="menu_user_agreement">User agreement</string>
    <string name="back">Back to main screen</string>
    <string name="share_app_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">sergey.kuleshov@ru.rhenus.com</string>
    <string name="support_subj">Message to developers of the Playlist Maker application</string>
    <string name="support_text">Thanks to the developers for the cool application!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Refresh</string>
    <string name="nothing_found">Nothing found</string>
    <string name="no_connection">Network error\n\nConnection unsuccessful. Check connection.</string>
    <string name="errorCommon">Something went wrong!</string>
    <string name="search_history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="album">Album</string>
    <string name="desc_artwork">Album artwork</string>
    <string name="desc_playbutton">Playbutton</string>
    <string name="desc_add_to_playlist">Add to playlist</string>
    <string name="desc_add_to_favorite">Add to favorite</string>
    <string name="duration">Duration</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="zero_duration" translatable="false">00:00</string>
    <string name="new_playlist">New playlist</string>
    <string name="no_playlist_message">You do not have playlists yet</string>
    <string name="media_empty_message">Your media is empty</string>
    <string name="favorite_tracks">Favorite tracks</string>
    <string name="playlists">Playlists</string>
    <string name="server_error">Server error!</string>
    <string name="check_connection">Check Internet connection!</string>
    <string name="name_hint">Name*</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="delete">Delete</string>
    <string name="playlist_creation_cancelling_confirmation">Do you confirm abort changes?</string>
    <string name="filled_data_lost_warning">All the filled data will be lost!</string>
    <string name="added_to_playlist_message">Added to playlist %1$s</string>
    <string name="exists_in_playlist_message">The track is already in playlist %1$s</string>
    <string name="tracks_quantity">%1$d tracks</string>
    <string name="playlist_created_message">Playlist %1$s has been creaded</string>
    <string name="tracks_quantity_1">%1$d tracks</string>
    <string name="tracks_quantity_2">%1$d tracks</string>
    <string name="minutes_quantity">%1$d minutes</string>
    <string name="minutes_quantity_1">%1$d minutes</string>
    <string name="minutes_quantity_2">%1$d minutes</string>
    <string name="track_delete_dialog_title">Delete track?</string>
    <string name="track_delete_dialog_message">Are you sure to delete track from playlist?</string>
    <string name="empty_playlist_warning">The playlist is empty, you can\'t share it!</string>
    <string name="playlist_text_title">Playlist: %1$s\nDescription: %2$s\n</string>
    <string name="playlist_text_item" translatable="false">\n%1$d. %2$s - %3$s (%4$s)</string>
    <string name="menu_share">Share playlist</string>
    <string name="menu_edit">Edit playlist</string>
    <string name="menu_delete">Delete playlist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="playlist_delete_dialog_title">Delete playlist?</string>
    <string name="playlist_delete_dialog_message">Are you sure to delete playlist?</string>
    <string name="playlist_deleted_message">Playlist %1$s has been deleted</string>
    <string name="edit_playlist_title">Edit playlist</string>
    <string name="save">Save</string>
    <string name="playlist_updated_message">Playlist %1$s has been updated</string>
    <string name="playlist_empty_message">No tracks in playlist so far</string>
    <string name="cant_start_foreground_service">Can\'t start foreground service!</string>
    <string name="track_not_found">Track not found!</string>

</resources>