<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:theme="@style/SettingsScreenTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_padding"
        android:layout_gravity="start"
        android:text="@string/settings"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/SettingsButtons"
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/menu_dark_theme"
        android:checked="false" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/SettingsButtons"
        android:id="@+id/settingsShareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share_glif"
        android:text="@string/menu_share_app" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/SettingsButtons"
        android:id="@+id/settingsMailToSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support_glif"
        android:text="@string/menu_support" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/SettingsButtons"
        android:id="@+id/settingsUserAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/right_arrow_glif"
        android:text="@string/menu_user_agreement" />

</LinearLayout>
