<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/main_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_padding"
        android:layout_gravity="start"
        android:text="@string/title"/>


    <Button
        android:id="@+id/buttonSearch"
        style="@style/MainScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/search_glif"/>

    <Button
        android:id="@+id/buttonMedia"
        style="@style/MainScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_weight="1"
        android:text="@string/mediateka"
        app:icon="@drawable/media_glif"/>

    <Button
        android:id="@+id/buttonSettings"
        style="@style/MainScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/settings_glif"/>

</LinearLayout>