<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    android:background="@color/dark">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_medium"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"/>
    </FrameLayout>

    <Button
        android:theme="@style/Base.Theme.PlaylistMaker.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/search"
        android:textColor="@color/dark"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/search_glif"
        app:iconTint="@color/dark"/>

    <Button
        android:theme="@style/Base.Theme.PlaylistMaker.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/mediateka"
        android:textColor="@color/dark"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/media_glif"
        app:iconTint="@color/dark"/>

    <Button
        android:theme="@style/Base.Theme.PlaylistMaker.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textColor="@color/dark"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/settings_glif"
        app:iconTint="@color/dark"/>

</LinearLayout>
