<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.PlaylistMaker.Settings_Night"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:padding="11dp">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/back_glif"
            app:tint="@color/white"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:backgroundTint="@color/dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="@dimen/main_text_size"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:gravity="start|center"
            android:text="@string/menu_dark_theme"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size" />

        <Switch
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end|center"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:checked="true"
            android:thumbTint="@color/light_bg"
            android:trackTint="@color/dark_track"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:gravity="start|center"
            android:text="@string/menu_share_app"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:tint="@color/white"
            android:src="@drawable/share_glif"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:backgroundTint="@color/dark"
            android:layout_marginEnd="11dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:gravity="start|center"
            android:text="@string/menu_support"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:tint="@color/white"
            android:src="@drawable/support_glif"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:backgroundTint="@color/dark"
            android:layout_marginEnd="11dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="11dp"
            android:gravity="start|center"
            android:text="@string/menu_user_agreement"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:tint="@color/white"
            android:src="@drawable/right_arrow_glif"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:backgroundTint="@color/dark"
            android:layout_marginEnd="11dp"/>
    </FrameLayout>

</LinearLayout>
