<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/MediaScreenTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.MainActivity">

    <!-- Кнопка назад на системном тулбаре -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topBorder">
    </androidx.appcompat.widget.Toolbar>

    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progressbar_diameter"
        android:layout_height="@dimen/progressbar_diameter"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <!-- Макетная сетка -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonsAxis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailsTopBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <!-- Раздел картинки альбома -->
    <ImageView
        android:id="@+id/artwork"
        android:layout_width="@dimen/zero_size"
        android:layout_height="@dimen/zero_size"
        android:contentDescription="@string/desc_artwork"
        tools:src="@drawable/b535f173143b2a1e1fc0c069482185b6"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/topBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@id/centerBorder"
        app:layout_constraintDimensionRatio="1:1"/>

    <!-- Раздел названий -->
    <TextView
        android:id="@+id/trackName"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        tools:text="[Yesterday (Remastered 2009)]"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/centerBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constrainedWidth="true"/>

    <TextView
        android:id="@+id/artistName"
        style="@style/ArtistText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_main_padding"
        android:gravity="start"
        tools:text="[The Beatles]"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constrainedWidth="true"/>

    <!-- Раздел кнопок -->
    <ImageButton
        android:id="@+id/plusButton"
        style="@style/SideButtons"
        android:layout_width="@dimen/side_buttons_diameter"
        android:layout_height="@dimen/side_buttons_diameter"
        android:contentDescription="@string/desc_add_to_playlist"
        android:src="@drawable/plusbutton_glif"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/buttonsAxis"
        app:layout_constraintBottom_toBottomOf="@id/buttonsAxis"
        app:layout_constraintDimensionRatio="h,1:1"/>

    <ImageButton
        android:id="@+id/playButton"
        style="@style/PlayButton"
        android:layout_width="@dimen/play_buttons_diameter"
        android:layout_height="@dimen/play_buttons_diameter"
        android:contentDescription="@string/desc_playbutton"
        android:src="@drawable/playbutton_glif"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/buttonsAxis"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="@id/buttonsAxis"
        app:layout_constraintDimensionRatio="h,1:1"/>

    <ImageButton
        android:id="@+id/favoritButton"
        style="@style/SideButtons"
        android:layout_width="@dimen/side_buttons_diameter"
        android:layout_height="@dimen/side_buttons_diameter"
        android:contentDescription="@string/desc_add_to_favorite"
        android:src="@drawable/favoritbutton_glif"
        app:layout_constraintTop_toTopOf="@id/buttonsAxis"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="@id/buttonsAxis"
        app:layout_constraintDimensionRatio="h,1:1"/>

    <TextView
        android:id="@+id/playTime"
        style="@style/PlayTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/zero_duration"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Цепь из полей для детального описания трека -->
    <!-- Цепь заголовков -->
    <TextView
        android:id="@+id/durationDetailsTitle"
        style="@style/DetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/detailsTopBorder"
        app:layout_constraintBottom_toTopOf="@+id/albumDetailsTitle"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="VisualLintLocaleText"/>

    <TextView
        android:id="@+id/albumDetailsTitle"
        style="@style/DetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/durationDetailsTitle"
        app:layout_constraintBottom_toTopOf="@+id/yearDetailsTitle"/>

    <TextView
        android:id="@+id/yearDetailsTitle"
        style="@style/DetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/albumDetailsTitle"
        app:layout_constraintBottom_toTopOf="@+id/genreDetailsTitle"/>

    <TextView
        android:id="@+id/genreDetailsTitle"
        style="@style/DetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/yearDetailsTitle"
        app:layout_constraintBottom_toTopOf="@+id/countryDetailsTitle"/>

    <TextView
        android:id="@+id/countryDetailsTitle"
        style="@style/DetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/genreDetailsTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Цепь значений -->
    <TextView
        android:id="@+id/durationDetailsData"
        style="@style/DetailsTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="[5:35]"
        app:layout_constraintTop_toBottomOf="@+id/detailsTopBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@+id/albumDetailsData"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/albumDetailsData"
        style="@style/DetailsTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="[Yesterday (Remastered 2009)]"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/main_padding"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@+id/durationDetailsData"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/albumDetailsTitle"
        app:layout_constraintBottom_toTopOf="@+id/yearDetailsData"
        tools:ignore="RtlSymmetry"
        app:layout_constraintHorizontal_bias="1"/>

    <TextView
        android:id="@+id/yearDetailsData"
        style="@style/DetailsTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="[1965]"
        app:layout_constraintTop_toBottomOf="@+id/albumDetailsData"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@+id/genreDetailsData"/>

    <TextView
        android:id="@+id/genreDetailsData"
        style="@style/DetailsTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="[Rock]"
        app:layout_constraintTop_toBottomOf="@+id/yearDetailsData"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@+id/countryDetailsData"
        tools:ignore="VisualLintLocaleText"/>

    <TextView
        android:id="@+id/countryDetailsData"
        style="@style/DetailsTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="[Великобритания]"
        app:layout_constraintTop_toBottomOf="@+id/genreDetailsData"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!-- Группы для управления видимостью записей с деталями -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/albumGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="albumDetailsTitle, albumDetailsData" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/yearGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="yearDetailsTitle, yearDetailsData" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/genreGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="genreDetailsTitle, genreDetailsData" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/countryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="countryDetailsTitle, countryDetailsData" />

    <!-- Группы для управления видимостью записей с деталями -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/titleBlockGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="artwork, trackName, artistName" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/playerBlockGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="plusButton, playButton, favoritButton, playTime" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/detailsBlockGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="durationDetailsTitle, durationDetailsData, albumGroup, yearGroup, genreGroup, countryGroup" />

    <LinearLayout
        android:id="@+id/placeholderView"
        android:theme="@style/Base.Theme.PlaylistMaker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="86dp"
            android:contentDescription="@string/errorCommon"
            tools:src="@drawable/no_connection"/>

        <TextView
            style="@style/MessageText"
            android:id="@+id/placeholderMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="[@string/no_connection]"/>

        <Button
            style="@style/PlaceholderButton"
            android:id="@+id/placeholderButton"
            android:layout_width="91dp"
            android:layout_height="36dp"
            android:text="@string/refresh"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>